--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "test": "node --test"
   },
   "author": "Alex Curran",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/node": "^20.11.4"
+  }
 }
